2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new element filters.

	* scribo/filter/images_in_paragraph.hh,
	* scribo/filter/paragraphs_bbox_overlap.hh,
	* scribo/filter/paragraphs_in_image.hh,
	* scribo/filter/separators_in_element.hh,
	* scribo/filter/separators_in_paragraph.hh: New.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Add util::box_intersection.

	* scribo/util/box_intersection.hh: New.

	* scribo/filter/object_links_bbox_overlap.hh: Make use of this new
	routine.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Various small fixes in Scribo.

	* scribo/core/paragraph_info.hh: Add validity information.

	* scribo/core/tag/line.hh: Fix guard.

	* scribo/debug/line_info_image.hh: Use is_textline().

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh: Check paragraph
	validity.

	* scribo/primitive/extract/alignments.hh,
	* scribo/primitive/extract/lines_pattern.hh,
	* scribo/primitive/extract/separators_nonvisible.hh,
	* scribo/primitive/group/from_double_link_any.hh,
	* scribo/text/link_lines.hh,
	* scribo/text/paragraphs.hh: Fix namespace ambiguity.

	* scribo/text/merging.hh: Add missing SCRIBO_NDEBUG guards.

	* src/primitive/extract/lines_h_thick_and_thin.cc: Add a missing
	include.

	* tests/primitive/extract/Makefile.am: Do not override an existing
	variable.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Introduce paragraph_id_t type.

	* scribo/core/paragraph_set.hh: Make use of this new type.

	* scribo/core/tag/paragraph.hh: New.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Share document structure data.

	* scribo/core/document.hh: Here.

2011-05-25 Coddy Levi <levi@lrde.epita.fr>

	Deep modifications and clean correction of the previous bug.

	* scribo/util/component_outline.hh: Here.

2011-05-24 Coddy Levi <levi@lrde.epita.fr>

	Further correction of the component outlining bug.
